# torm

./: .gitignore  Cargo.toml  LICENSE  PHASE5_COMPLETE.md  README.md  check-all.ps1  check-all.sh  check_keys.py  test_data.py
.github/workflows/: nodejs-sdk.yml
crates/torm/: Cargo.toml
crates/torm-derive/: Cargo.toml
crates/torm-derive/src/: lib.rs
crates/torm-server/: Cargo.toml
crates/torm-server/src/: main.rs  studio.html  studio.rs
crates/torm/examples/: advanced_queries.rs  basic_crud.rs  migration_demo.rs  relationships_demo.rs  validation_demo.rs
crates/torm/src/: db.rs  error.rs  lib.rs  migration.rs  model.rs  query.rs  validation.rs
sdks/go/: .gitignore  README.md  check.sh  client.go  go.mod  model.go  query.go  torm.go  validation.go
sdks/go/examples/: basic_usage.go
sdks/go/tests/: torm_test.go
sdks/nodejs/: .npmignore  README.md  check.sh  package.json  tsconfig.json
sdks/nodejs/examples/: basic-crud.ts  basic-usage.js  torm.config.ts
sdks/nodejs/src/: cli.ts  index.ts  migrations.ts  studio-server.ts
sdks/nodejs/studio/: index.html
sdks/nodejs/tests/: torm.test.ts
sdks/php/: README.md  check.sh  composer.json
sdks/php/examples/: basic_usage.php
sdks/php/src/: Model.php  QueryBuilder.php  Torm.php  TormClient.php
sdks/php/tests/: TormTest.php
sdks/python/: README.md  check.sh  pyproject.toml  setup.py
sdks/python/examples/: basic_crud.py  basic_usage.py  migrations.py
sdks/python/tests/: test_torm.py
sdks/python/toonstore/: __init__.py
sdks/python/toonstore_torm/: __init__.py  client.py  exceptions.py  model.py  query.py
sdks/toonstore-suite/: README.md  package.json  tsconfig.json
sdks/toonstore-suite/src/: index.ts
