[workspace]
members = [
    "crates/torm",
    "crates/torm-server",
    "crates/torm-derive",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["ToonStore Team"]
license = "MIT"
repository = "https://github.com/Kalama-Tech/torm"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"

# HTTP server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Redis client
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Async runtime
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Validation
validator = { version = "0.19", features = ["derive"] }
regex = "1.10"

# Proc macros
syn = "2.0"
quote = "1.0"
proc-macro2 = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
