[package]
name = "torm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
redis = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
regex = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
torm-derive = { path = "../torm-derive" }

[dev-dependencies]
tokio-test = "0.4"
